root/macros/compiling_error.txt
/home/ibrahim/programe/root/macros/Correlation2V1.C:1:1: error: expected unqualified-id before ‘{’ token
 {
 ^
